k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pharma
  labels:
    environment: prod
