k8s/BackendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pharma
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
